[gd_scene load_steps=6 format=4 uid="uid://da46sqhr4dsg3"]

[ext_resource type="Script" uid="uid://msp6bf3cru8w" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/Rendering/parts/WingScene/parts/GateRender/gate_render.gd" id="1_lnxyw"]
[ext_resource type="PackedScene" uid="uid://gupgijiij07d" path="res://Scenes/CellScene/lighting/SpinLights.tscn" id="2_62k34"]

[sub_resource type="ArrayMesh" id="ArrayMesh_62k34"]
_surfaces = [{
"aabb": AABB(-4, -0.5, -8, 8, 1, 16),
"attribute_data": PackedByteArray("AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("AACAwAAAAL8AAABBAACAwAAAAL8AAADBAACAwAAAAD8AAADBAACAQAAAAL8AAADBAACAwAAAAL8AAADBAACAwAAAAL8AAABBAACAwAAAAD8AAADBAACAwAAAAL8AAADBAACAQAAAAL8AAADBAACAwAAAAD8AAADBAACAwAAAAD8AAABBAACAwAAAAL8AAABBAACAwAAAAL8AAABBAACAwAAAAD8AAABBAACAQAAAAD8AAABBAACAQAAAAD8AAABBAACAwAAAAD8AAABBAACAwAAAAD8AAADBAACAwAAAAL8AAABBAACAQAAAAL8AAABBAACAQAAAAL8AAADBAACAQAAAAD8AAABBAACAQAAAAL8AAABBAACAwAAAAL8AAABBAACAQAAAAL8AAADBAACAQAAAAL8AAABBAACAQAAAAD8AAABBAACAQAAAAL8AAADBAACAQAAAAD8AAADBAACAwAAAAD8AAADBAACAwAAAAD8AAADBAACAQAAAAD8AAADBAACAQAAAAD8AAABBAACAQAAAAD8AAABBAACAQAAAAD8AAADBAACAQAAAAL8AAADBAAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//////wAA/z//////AAD/P/////8AAP8//3//////AAD/f/////8AAP9//////wAA////f/9//n////9//3/+f////3//f/5/")
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_7uldv"]
_surfaces = [{
"aabb": AABB(-4, -0.5, -8, 8, 1, 16),
"attribute_data": PackedByteArray("AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("AACAwAAAAL8AAABBAACAwAAAAL8AAADBAACAwAAAAD8AAADBAACAQAAAAL8AAADBAACAwAAAAL8AAADBAACAwAAAAL8AAABBAACAwAAAAD8AAADBAACAwAAAAL8AAADBAACAQAAAAL8AAADBAACAwAAAAD8AAADBAACAwAAAAD8AAABBAACAwAAAAL8AAABBAACAwAAAAL8AAABBAACAwAAAAD8AAABBAACAQAAAAD8AAABBAACAQAAAAD8AAABBAACAwAAAAD8AAABBAACAwAAAAD8AAADBAACAwAAAAL8AAABBAACAQAAAAL8AAABBAACAQAAAAL8AAADBAACAQAAAAD8AAABBAACAQAAAAL8AAABBAACAwAAAAL8AAABBAACAQAAAAL8AAADBAACAQAAAAL8AAABBAACAQAAAAD8AAABBAACAQAAAAL8AAADBAACAQAAAAD8AAADBAACAwAAAAD8AAADBAACAwAAAAD8AAADBAACAQAAAAD8AAADBAACAQAAAAD8AAABBAACAQAAAAD8AAABBAACAQAAAAD8AAADBAACAQAAAAL8AAADBAAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//////wAA/z//////AAD/P/////8AAP8//3//////AAD/f/////8AAP9//////wAA////f/9//n////9//3/+f////3//f/5/")
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_lnxyw"]
_surfaces = [{
"aabb": AABB(-10, -2, -10, 20, 4, 20),
"attribute_data": PackedByteArray("AACAPwAAAACamXk/mpl5PwAAgD8AAIA/zczMPM3MzDwAAIA/AAAAAAAAAAAAAAAAAAAAAAAAgD/NzMw8zczMPAAAAAAAAAAAmpl5P83MzDwAAIA/AAAAAM3MzDzNzMw8AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAAACamXk/zczMPJqZeT+amXk/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/zczMPJqZeT8AAAAAAACAP5qZeT+amXk/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAgD/NzMw8mpl5P83MzDzNzMw8mpl5P5qZeT8AAAAAAACAPwAAgD8AAIA/mpl5P83MzDwAAIA/AAAAAM3MzDzNzMw8AAAAAAAAgD/NzMw8mpl5P83MzDzNzMw8AAAAAAAAgD/NzMw8zczMPAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAAACamXk/zczMPJqZeT+amXk/AAAAAAAAAAAAAIA/AACAPwAAgD8AAAAAzczMPM3MzDwAAIA/AAAAAAAAAAAAAAAAAACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/mpl5P5qZeT8AAAAAAACAPwAAgD8AAIA/AACAPwAAAACamXk/mpl5PwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/zczMPJqZeT8AAAAAAACAP5qZeT+amXk/AAAAAAAAAAAAAIA/AAAAAAAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAACAPwAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAIA/AAAAAAAAAAAAAIA/AAAAAAAAgD8AAIA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 96,
"vertex_data": PackedByteArray("AAAgwQAAAMAAACDBAAAYQQAAAMAAABjBAAAgQQAAAMAAACDBAAAYQQAAAEAAABhBAAAgQQAAAEAAACDBAAAgQQAAAEAAACBBAAAgwQAAAEAAACBBAAAYQQAAAEAAABhBAAAgQQAAAEAAACBBAAAYQQAAAEAAABjBAAAgQQAAAEAAACDBAAAYQQAAAEAAABhBAAAgQQAAAEAAACBBAAAgQQAAAEAAACDBAAAgQQAAAMAAACDBAAAgQQAAAEAAACDBAAAYQQAAAEAAABjBAAAYwQAAAEAAABjBAAAgQQAAAMAAACDBAAAgQQAAAEAAACDBAAAgwQAAAEAAACDBAAAgQQAAAMAAACBBAAAgQQAAAEAAACBBAAAgQQAAAMAAACDBAAAYQQAAAMAAABhBAAAgQQAAAMAAACBBAAAYQQAAAMAAABjBAAAgQQAAAEAAACBBAAAgQQAAAMAAACBBAAAgwQAAAMAAACBBAAAgQQAAAMAAACBBAAAYQQAAAMAAABhBAAAYwQAAAMAAABhBAAAYQQAAAMAAABjBAAAgQQAAAMAAACBBAAAgQQAAAMAAACDBAAAYwQAAAMAAABjBAAAgwQAAAMAAACDBAAAYwQAAAMAAABhBAAAgwQAAAEAAACBBAAAYwQAAAEAAABhBAAAYQQAAAEAAABhBAAAgQQAAAMAAACBBAAAYwQAAAMAAABhBAAAgwQAAAMAAACBBAAAgwQAAAMAAACBBAAAgwQAAAMAAACDBAAAgwQAAAEAAACDBAAAgwQAAAMAAACDBAAAYwQAAAMAAABjBAAAYQQAAAMAAABjBAAAgQQAAAMAAACDBAAAgwQAAAEAAACDBAAAgwQAAAMAAACDBAAAYwQAAAMAAABhBAAAgwQAAAMAAACDBAAAgwQAAAMAAACBBAAAgwQAAAEAAACBBAAAgQQAAAEAAACBBAAAgwQAAAMAAACBBAAAYwQAAAEAAABjBAAAgwQAAAEAAACBBAAAgwQAAAEAAACDBAAAgQQAAAEAAACDBAAAYwQAAAEAAABjBAAAgwQAAAEAAACDBAAAgwQAAAEAAACDBAAAgwQAAAEAAACBBAAAgwQAAAMAAACBBAAAYwQAAAEAAABhBAAAgwQAAAEAAACBBAAAYwQAAAEAAABjBAAAYQQAAAEAAABhBAAAYQQAAAMAAABhBAAAYQQAAAMAAABjBAAAYwQAAAMAAABhBAAAYQQAAAMAAABhBAAAYQQAAAEAAABhBAAAYwQAAAEAAABjBAAAYQQAAAEAAABjBAAAYQQAAAMAAABjBAAAYQQAAAMAAABjBAAAYwQAAAMAAABjBAAAYwQAAAEAAABjBAAAYQQAAAMAAABjBAAAYQQAAAEAAABjBAAAYQQAAAEAAABhBAAAYwQAAAMAAABhBAAAYwQAAAEAAABhBAAAYwQAAAEAAABjBAAAYwQAAAEAAABjBAAAYwQAAAMAAABjBAAAYwQAAAMAAABhBAAAYQQAAAEAAABhBAAAYwQAAAEAAABhBAAAYwQAAAMAAABhB/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//////AAD/f/////8AAP9//////wAA/3//////AAD/f/////8AAP9//////wAA/3//////AAD/f/////8AAP9//////wAA////f/9//n////9//3/+f////3//f/5//3//////AAD/f/////8AAP9//////wAA/////wAA/z//////AAD/P/////8AAP8/////f/9//n////9//3/+f////3//f/5//38AAAAAAAD/fwAAAAAAAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//38AAAAAAAD/fwAAAAAAAP9/AAAAAAAA/38AAP//AAD/fwAAAAAAAP9/AAD//wAA/38AAP//AAD/fwAA//8AAP9/AAAAAAAA/3//////AAD/f/////8AAP9//////wAA/38AAAAAAAD/fwAAAAAAAP9/AAD//wAAAAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//38AAAAAAAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/3//////AAD/f/////8AAP9//////wAAAAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//////AAD/f/////8AAP9//////wAAAAD/f/9/AIAAAP9//38AgAAA/3//fwCA/////wAA/7//////AAD/v/////8AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+//3//fwAA/7//f/9/AAD/v/9//38AAP+/AAD/f/9/AIAAAP9//38AgAAA/3//fwCA////f/9/AID///9//38AgP///3//fwCA////f/9/AID///9//38AgP///3//fwCA/////wAA/7//////AAD/v/////8AAP+/")
}]

[node name="GateRender" type="Node3D"]
script = ExtResource("1_lnxyw")

[node name="Flap1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0, 1, -4, 0, 0)
mesh = SubResource("ArrayMesh_62k34")

[node name="Flap2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0, 1, 4, 0, 0)
mesh = SubResource("ArrayMesh_7uldv")

[node name="Flap3" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -1.12408, -4)
mesh = SubResource("ArrayMesh_62k34")

[node name="Flap4" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -1.12408, 4)
mesh = SubResource("ArrayMesh_7uldv")

[node name="SafetyGate" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("ArrayMesh_lnxyw")

[node name="SpinLights" parent="SafetyGate" instance=ExtResource("2_62k34")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.13005, 0)
